# rest-api-tutorial

./: CLAUDE.md  README.md  backend.md  conf.py  index.rst  links.rst  pyproject.toml  syllabus.md
.cursor/: mcp.json
.github/workflows/: build_deploy.yml
00-bce/: app.py
00-bce/song_finder/: entity.py
01-hello-world/: README.rst  app.py  penguins.csv  pyproject.toml
02-pydantic/: README.rst  app.py  model.pkl  train.py
03-async/: README.rst  app.py  send_many.py
03-auth/: README.rst
04-test/: README.rst
05-crud/: README.rst  identifiers.md
06-repository/: README.rst
07-bce/: README.rst  pyproject.toml
08-error-handling/: README.rst
11-health-checks/: README.rst
12-async/: README.rst
13-best-practices/: README.rst
MCP_workshop/: .env.example  .gitignore  INSTALL_GUIDE.md  README.md  TUTORIAL.md  cats_demo.txt  chat.py  credentials_for_claude.md  ingest.py  pyproject.toml  server.py  server_simple.py  simple_chat.py
MCP_workshop/.cursor/: mcp.json
data_centric_api/: app.py  datamodel.py  models.py
data_centric_api/static/: index.html
