
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["first_steps"]

[project]
name = "python-grundlagenkurs"
version = "0.1.0"
authors = [
    {name = "Kristian Rother", email = "kristian.rother@posteo.de"},
]
description = "Python Aufgaben für Einsteiger"
readme = "README.md"
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = ">=3.12"
dependencies = [
    "furo>=2024.8.6",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6.1",
]
