[project]
name = "rest-api"
version = "0.1.0"
description = "A tutorial for crafting REST APIs with Python and FastAPI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.127.1",
    "httpx>=0.28.1",
    "polars>=1.37.1",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "uvicorn>=0.40.0",
]	
