[project]
name = "todo-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
authors = [
  { name="Kristian Rother", email="kristian.rother@posteo.de" },
]
dependencies = [
    "fastapi[standard]>=0.128.0",
]
[dependency-groups]
dev = [
    "pylint==2.15.4",
    "pytest",
    "pytest-cov",
    "pytest-flake8",
    "faker",
    "mypy==1.7.1",
    "black==24.8.0",
    "isort==5.13.2",
    "flake8==7.0.0",
    "flake8-isort==6.1.1",
]

[project.urls]
Homepage = "https://www.academis.eu"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
prerelease = "allow"

[tool.hatch.build.targets.wheel]
packages = ["todolist"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
testpaths = ["todolist", "tests"]
flake8-max-line-length = 79
flake8-ignore = ["E203", "E266", "E501", "W503"]
flake8-max-complexity = 18

[tool.black]
line-length = 79
skip-string-normalization = true
exclude = "/(\\.git|build|dist|.venv)/"

[tool.coverage.run]
branch = true
source = ["todolist"]
omit = ["*/__init__.py"]

[tool.coverage.report]
exclude_lines = ["raise NotImplementedError"]