[project]
name = "mcp-rag-workshop"
version = "0.1.0"
description = "MCP RAG Server using Anthropic Claude and ChromaDB"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=2.13.0",
    "anthropic>=0.50.0",
    "chromadb>=1.0.0",
    "sentence-transformers>=2.2.0",
    "python-dotenv>=1.0.0",
    "pypdf>=3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
